--- a/course.yaml
+++ b/course.yaml
@@ -4,6 +4,7 @@ title: HSK - Level Four
 tags:
  - HSK
  - Exam
+image: exam.jpg
 description: |
 
   The Hànyǔ Shuǐpíng Kǎoshì (HSK), (Chinese: 汉语水平考试), translated as Chinese
